name:                hscheme
version:             0.1.0.0

-- synopsis:
-- description:

-- The package author(s).
author:              lbito

-- An email address to which users can send suggestions, bug reports, and
-- patches.
maintainer:          lbit@protonmail.com

-- A copyright notice.
-- copyright:

-- category:

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a
-- README.
extra-source-files:  ChangeLog.md, readme.md

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10


executable hscheme
  -- .hs or .lhs file containing the Main module.
  main-is:             Parser.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base >=4.10 && <4.11, parsec

  -- Directories containing source files.
  hs-source-dirs:      src

  -- Base language which the package is written in.
  default-language:    Haskell2010

