name:                hscheme
version:             0.1.0.0

-- synopsis:
-- description:

-- The package author(s).
author:              lbito

-- An email address to which users can send suggestions, bug reports, and
-- patches.
maintainer:          lbit@protonmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md, readme.md
cabal-version:       >=1.10

executable hscheme
  main-is:             Main.hs
  build-depends:       base >=4.10 && <4.11, parsec, mtl
  other-modules:       Parser, LispVal, LispError, Eval, Env, Repl 
  hs-source-dirs:      src
  default-language:    Haskell2010
